--- a/exercise2/homestyle.css
+++ b/exercise2/homestyle.css
@@ -7,6 +7,7 @@ body {
 
     font-family: 'Encode Sans', sans-serif;
     font-size: 20px;
+    max-width: 90%;
     width: 1280px;
     margin:auto;
     display: flex;
